# raytracer

./: .gitignore  Cargo.toml  README.md  debug.txt  justfile
.github/workflows/: test.yml
assets/: cornell.gltf
browser/: package-lock.json  package.json  vite.config.ts
browser/src/: App.tsx  render.ts  worker.ts
browser/src/routes/: +page.svelte
cli/: Cargo.toml
cli/assets/: teapot.gltf
cli/src/: main.rs
gui/: Cargo.toml
gui/assets/: cornell.gltf
main/: .gitignore  Cargo.toml
main/src/: main.rs
raytracer/: Cargo.toml
raytracer/benches/: color.rs
raytracer/src/: aabb.rs  bounds.rs  camera.rs  color.rs  film.rs  filter.rs  integrator.rs  js.rs  lib.rs  macros.rs  math.rs  primitive.rs  random.rs  range.rs  ray.rs  sample.rs  spectrum.rs  transform.rs  util.rs  vec.rs  vec2.rs
raytracer/src/color/: colorspace.rs  mod.rs  rgb.rs  xyz.rs
raytracer/src/shape/: mod.rs  sphere.rs  triangle_mesh.rs
raytracer/src/vec/: generic.rs  macros.rs  mat3.rs  mat4.rs  mod.rs  random.rs  vec2.rs  vec3.rs
raytracer/src/vec2/: mat4.rs  mod.rs
raytracer_bin/: Cargo.toml
raytracer_bin/src/: main.rs
raytracer_lib/: Cargo.toml
raytracer_lib/data/: cie-xyz.json
raytracer_lib/src/: aabb.rs  color.rs  lib.rs  onb.rs  random.rs  ray.rs  spectrum.rs  util.rs  vec3.rs
scenes/: earth.json
src/: aabb.rs  bvh.rs  camera.rs  color.rs  helpers.rs  main.rs  material.rs  math.rs  object.rs  ppm.rs  random.rs  range.rs  ray.rs  renderer.rs  sample.rs  scene.rs  scenes.rs  spectrum.rs  texture.rs  trace.rs  util.rs  vec3.rs
src/object/: mod.rs  quad.rs  sphere.rs  triangle_mesh.rs  world.rs
src/v2/: color.rs  mod.rs  spectrum.rs  util.rs
