[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[dependencies]
enum_dispatch = "0.3.13"
indicatif = { version = "0.17.8", features = ["rayon"] }
num-traits = "0.2.19"
ordered-float = "4.2.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.10.0"

[profile.release]
debug = true
