[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[dependencies]
enum_dispatch = "0.3.13"
gltf = "1.4.1"
image = "0.25.1"
indicatif = { version = "0.17.8", features = ["rayon"] }
libc = "0.2.155"
num-traits = "0.2.19"
ordered-float = "4.2.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.10.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.release]
debug = true
