[package]
name = "main"
version = "0.1.0"
edition = "2021"
default-run = "main"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.8", features = ["derive"] }
color-eyre = "0.6.3"
indicatif = { version = "0.17.8", features = ["rayon"] }
mimalloc = "0.1.43"
ordered-float = "4.2.1"
pixels = "0.13.0"
plotters = "0.3.6"
rayon = "1.10.0"
raytracer = { path = "../raytracer" }
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
tev_client = "0.5.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
winit = "0.28"
winit_input_helper = "0.14"

[dev-dependencies]
tracing-test = "0.2.5"
