[package]
name = "cli"
version = "0.1.0"
edition = "2021"
default-run = "cli"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
color-eyre = "0.6.3"
image = "0.25.2"
mimalloc = "0.1.43"
ordered-float = "4.2.1"
pixels = "0.13.0"
plotters = "0.3.6"
rayon = "1.10.0"
raytracer = { path = "../raytracer" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
winit = "0.28"
winit_input_helper = "0.14"

[dev-dependencies]
tracing-test = "0.2.5"
