[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
enum_dispatch = "0.3.13"
getrandom = { version = "0.2", features = ["js"], optional = true }
# used for the erff function, require for the Gaussian distribution
libm = "0.2.8"
ordered-float = "4.2.1"
parking_lot = "0.12.3"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tracing = "0.1.40"
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
criterion = "0.5.1"
tracing-subscriber = "0.3.18"
tracing-test = "0.2.5"

[features]
wasm = ["wasm-bindgen", "getrandom"]

[[bench]]
name = "color"
harness = false

[lib]
crate-type = ["cdylib", "lib"]
