[package]
name = "raytracer_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
enum_dispatch = "0.3.13"
glam = "0.28.0"
once_cell = "1.19.0"
ordered-float = "4.2.1"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tracing = "0.1.40"
